@@ -8,6 +8,8 @@
 + *TAT.py*: Add python binding for =clear_fermi_symmetry=.
 + *tetragono*: Check whether the state is =None= when dump the state to file to avoid overwriting file by mistake.
 + *tetragono*: Add =gm_clear_symmetry= for sampling lattice.
++ *tetragono*: Add =gm_run_g= and =ap_run_g= for middle level API. These are generators, which yield the energy of the
+  state before gradient descent after every gradient step.
 *** Changed
 + *tetragono*: =new_dimension= in simple update will be intepreted as the threshold of singular value when it is float.
 + *TAT.hpp, TAT.py*: =clear_symmetry= will return NoSymmetry tensor or ParityTensor based on whether the original tensor
